--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     password: 
   jpa:
     database-platform: org.hibernate.dialect.HSQLDialect
+    show-sql: true
     hibernate:
       ddl-auto: update
   mvc:
